--- a/week1-JakubZegzulka/project1-inclass/index.html
+++ b/week1-JakubZegzulka/project1-inclass/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Prototyping 2: Fun Excersise</title>
+    <title>Prototyping 2: Week 1: Project 1/title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
