--- a/week1-JakubZegzulka/project2/index.html
+++ b/week1-JakubZegzulka/project2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prototyping 2 + Python</title>
+    <title>Prototyping2: Week 1: Side Project/HW</title>
     <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
     <script defer src="https://pyscript.net/latest/pyscript.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -34,7 +34,6 @@
     </main>
 
     <div class="absolute bottom-0 right-0 text-[#676767] p-6 text-[12px]">
-        Made by Jakub Zegzulka
     </div>
 
     <template id="log-template">
