--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <a href="week1-JakubZegzulka/project1-inclass/index.html">In Class</a>
     <a href="week1-JakubZegzulka/project2/index.html">HW</a>
     <h2>Week2</h2>
-    <a href=""></a>
+    <a href="week2-JakubZegzulka/project1-inclass/index.html">In Class</a>
+    <a href="week2-JakubZegzulka/project2-hw/index.html">HW</a>
 </body>
 </html>
