--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <h2>Week2</h2>
     <a href="week2-JakubZegzulka/project1-inclass/index.html">In Class</a>
     <a href="week2-JakubZegzulka/project2-hw/index.html">HW</a>
+    <h2>Week4</h2>
+    <a href="week4-JakubZegzulka/project1-inclass/index.html">In Class</a>
 </body>
 </html>
